[gd_scene load_steps=6 format=2]

[ext_resource path="res://Screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://SettingsScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/buttons/audioOn.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/musicOn.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/return.png" type="Texture" id=5]

[node name="SettingsScreen" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="Buttons" type="HBoxContainer" parent="Margins/Main" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 178.0
margin_right = 440.0
margin_bottom = 278.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 75
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="SoundButton" type="TextureButton" parent="Margins/Main/Buttons" index="0" groups=[
"buttons",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 82.0
margin_right = 182.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
_sections_unfolded = [ "Textures" ]

[node name="MusicButton" type="TextureButton" parent="Margins/Main/Buttons" index="1" groups=[
"buttons",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_right = 357.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="Buttons2" type="HBoxContainer" parent="Margins/Main" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 378.0
margin_right = 440.0
margin_bottom = 478.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 75
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="ReturnButton" type="TextureButton" parent="Margins/Main/Buttons2" index="0" groups=[
"buttons",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 170.0
margin_right = 270.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[connection signal="pressed" from="Margins/Main/Buttons/SoundButton" to="." method="_on_SoundButton_pressed"]

[connection signal="pressed" from="Margins/Main/Buttons/MusicButton" to="." method="_on_MusicButton_pressed"]

[connection signal="pressed" from="Margins/Main/Buttons2/ReturnButton" to="." method="_on_ReturnButton_pressed"]


